--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ padding: 10px;
 /**----PAGES NOSOTROS---*/
 .comotrabajamos_nos h2{
 font-size: 40px;
-color:rgb(236, 107, 107);
+color:rgb(236, 107, 107) ;
 display: flex;
 justify-content:space-around;
 align-items: center;
@@ -284,23 +284,23 @@ padding: 10px;
     
 .comotrabajamos_nos p{
     font-size: 20px;
-   
-    color:rgb(236, 107, 107);
+   color:rgb(236, 107, 107);
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 10px;
 }
 .carrusel div img{
-    width: 100% !important;
+    width: 200% !important;
     height: 100% !important;
     width: 800px !important;
     height:400px !important;
+    padding: 20px !important;
+    margin: 10px !important
 }
     
 .comotrabajamos_nos footer{
     background-color:rgb(226, 166, 166) ;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -314,7 +314,6 @@ footer img{
 /**----PAGES TRABAJA CON NOSOTROS---*/
 .trabajar_nos h2{
     font-size: 40x;
-   
     color: rgb(234, 148, 148);
     display: flex;
     justify-content: space-between;
@@ -358,15 +357,15 @@ footer img{
     align-items: center;   
 }
 .dejanostucontacto img{
-    width: 50%;
-    height:50%;
+    width: 100%;
+    height:100%;
     display: flex;
     flex-direction: column;
 }
 .formulario{
-    
-    font-size: 15px;
+     font-size: 15px;
     color: rgb(234, 148, 148);
+    padding: 20px;
 }
 
     /**------FOOTER-------*/
@@ -424,6 +423,7 @@ footer{
     }
  }
 
+
 @media screen and (max-width:542px){
     .nuestrosclientes h2{
         font-size: 15px;
@@ -433,9 +433,6 @@ footer{
         font-size: 10px;
     }
 }
-
-
-
 
   @media screen and (max-width:450px){
     .grid-galeria{
@@ -547,6 +544,88 @@ footer{
     display: none;
  }
 }
+/**------media query pages Nosotros--------*/
+@media screen and (max-width:759px){
+    .comotrabajamos_nos h2{
+       font-size: 20px;
+       margin: 5px;
+       padding: 5px;
+    }
+.comotrabajamos_nos p{
+    font-size: 15px;
+}    
+}
+@media screen and (max-width:680px){
+    .carrusel div img{
+        width:600px !important;
+        height: 400px !important;
+        padding:15px !important ;
+        margin: 10px !important;
+
+    }
+    
+}
+@media screen and (max-width:500px){
+    .carrusel div img{
+        width:400px !important ;
+        height: 300px !important;
+        padding: 10px !important;
+        margin: 8px !important;
+    }
+}
+/**------media Pages Trabaja con Nosotros--------*/
+@media screen and (max-width:685px){
+    .trabajar_nos h2{
+        font-size: 25px;
+        padding: 15px;
+    }
+.trabajarconnos{
+    font-size: 20px;
+
+}
+.experiencia{
+    font-size: 20px;
+}
+}
+@media screen and (max-width:570px){
+    .trabajar_nos h2{
+        font-size: 15px;
+        padding: 10px;
+    }
+.trabajarconnos{
+    font-size: 15px;
+
+}
+.experiencia{
+    font-size: 15px;
+}
+}
+
+/**------media Pages Dejanos tu contacto--------*/
+@media screen and (max-width:765px){
+.dejanostucontacto h2{
+    font-size: 30px;
+    padding: 7px;
+}
+.dejanostucontacto p{
+    font-size: 18px;
+}
+.formulario{
+    font-size: 10px;
+    padding: 15px;
+}
+}
+@media screen and (max-width:480px){
+    .dejanostucontacto h2{
+        font-size: 20px;
+        padding: 5px;
+    }
+.dejanostucontacto p{
+    font-size: 10px;
+    padding: 10px;
+}
+}
+
 /**------media query footer--------*/
 @media screen and (max-width:700px){
 footer h2{
