--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,1 +1,585 @@
-/*# sourceMappingURL=estilos.css.map */
+.trabajar_nos img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/**---RESET----*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/**-------BODY-----------*/
+body {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+/**-------clases de bostrap-----------*/
+.menu-color {
+  background-color: rgb(226, 166, 166);
+  color: white;
+}
+
+.carrusel div img {
+  width: 200% !important;
+  height: 100% !important;
+  width: 800px !important;
+  height: 400px !important;
+  padding: 20px !important;
+  margin: 10px !important;
+}
+
+.trabajarconnos {
+  font-size: 30px;
+  color: rgb(234, 148, 148);
+}
+
+.experiencia {
+  font-size: 30px;
+  color: rgb(234, 148, 148);
+}
+
+.formulario {
+  font-size: 15px;
+  color: rgb(234, 148, 148);
+  padding: 20px;
+}
+
+header {
+  background-color: rgb(226, 166, 166);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  top: 0;
+}
+header a {
+  text-decoration: none;
+  background-color: rgb(226, 166, 166);
+}
+header h1 {
+  color: white;
+  font-size: 60px;
+  font-weight: 700;
+  text-decoration: none;
+}
+header img {
+  width: 100px;
+  height: 100px;
+}
+
+/**---pages nuestros clientes ----*/
+.nuestrosclientes h2 {
+  font-size: 40px;
+  color: rgb(234, 148, 148);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+.nuestrosclientes p {
+  font-size: 30px;
+  color: rgb(234, 148, 148);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+
+.hero {
+  width: 100%;
+  height: 400px;
+  background-image: url(../img/perrocorriendo.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+h2 {
+  color: rgb(9, 9, 9);
+  font-size: 40px;
+  border: 3px solid;
+}
+
+p {
+  color: rgb(9, 9, 9);
+  font-size: 30px;
+  font-weight: 30px;
+  margin-bottom: 40px;
+}
+
+a {
+  font-size: 20px;
+  padding: 10px;
+  color: white;
+  background-color: rgb(234, 148, 148);
+  text-decoration: none;
+}
+
+/**---pages nosotros ----*/
+.comotrabajamos {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.comotrabajamos div {
+  white-space: 50%;
+}
+.comotrabajamos div h2 {
+  background-color: rgb(226, 166, 166);
+  color: rgb(9, 9, 9);
+  font-size: 40px;
+  text-align: center;
+  border: 2px solid;
+  padding: 10px;
+}
+.comotrabajamos div h3 {
+  background-color: rgb(226, 166, 166);
+  text-align: center;
+  color: rgb(9, 9, 9);
+  font-size: 30px;
+  font-weight: 30px;
+  padding: 10px;
+  margin: 10px;
+}
+.comotrabajamos div p {
+  background-color: rgb(226, 166, 166);
+  text-align: center;
+  color: rgb(9, 9, 9);
+  font-size: 20px;
+  font-weight: 20px;
+  padding: 10px;
+  margin: 20px;
+}
+.comotrabajamos img {
+  width: 700px;
+  height: 500px;
+}
+
+.sobrenosotros {
+  display: flex;
+  justify-content: row-reverse;
+  align-items: center;
+}
+.sobrenosotros div {
+  width: 55%;
+}
+.sobrenosotros div h2 {
+  background-color: rgb(226, 166, 166);
+  color: rgb(9, 9, 9);
+  font-size: 40px;
+  text-align: center;
+  border: 2px solid;
+  padding: 10px;
+}
+.sobrenosotros div p {
+  background-color: rgb(226, 166, 166);
+  color: rgb(9, 9, 9);
+  font-size: 20px;
+  text-align: center;
+  padding: 10px;
+  margin: 20px;
+}
+.sobrenosotros img {
+  width: 700px;
+  height: 420px;
+}
+
+.productos h2 {
+  background-color: rgb(226, 166, 166);
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  padding: 10px;
+  text-transform: uppercase;
+  padding: 10px;
+  margin: 10px;
+}
+.productos div img {
+  width: 200px;
+  height: 200px;
+}
+.productos div a {
+  background-color: rgb(234, 148, 148);
+  text-decoration: none;
+  color: white;
+  padding: 5px;
+}
+.productos div h3 {
+  margin-bottom: 8px;
+  font-size: 13px;
+}
+
+.productos .servicios {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.productos .servicios div {
+  border: 2px solid;
+  font-size: 15px;
+  width: 270px;
+  height: 270px;
+  text-align: center;
+  margin: 15px;
+  padding: 10px;
+  box-shadow: -1px 10px 42px -7px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 10px 42px -7px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 10px 42px -7px rgba(0, 0, 0, 0.75);
+}
+
+.comotrabajamos_nos h2 {
+  font-size: 40px;
+  color: rgb(234, 148, 148);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+.comotrabajamos_nos p {
+  font-size: 20px;
+  color: rgb(234, 148, 148);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+
+/**---pages nuestros clientes ----*/
+.grid-galeria {
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 300px;
+  gap: 20px;
+}
+.grid-galeria div img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  box-shadow: -1px 10px 42px -14px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 10px 42px -14px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 10px 42px -14px rgba(0, 0, 0, 0.75);
+}
+.grid-galeria h3 {
+  position: absolute;
+  bottom: 0;
+  color: white;
+  background-color: rgb(9, 9, 9) width 100%;
+  font-size: 20px;
+}
+
+.grid-item {
+  position: relative;
+}
+
+.img-1 {
+  grid-column: span 2;
+}
+
+.img-3 {
+  grid-column: span 2;
+}
+
+.img-4 {
+  grid-row: span 2;
+}
+
+/**---pages trabaja con nosotros ----*/
+.trabajar_nos h2 {
+  font-size: 30px;
+  color: rgb(234, 148, 148);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+.trabajar_nos img {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+/**----PAGES DEJANOS TU CONTACTO---*/
+.dejanostucontacto h2 {
+  font-size: 40px;
+  color: rgb(226, 166, 166);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+.dejanostucontacto img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.dejanostucontacto p {
+  font-size: 30px;
+  color: rgb(234, 148, 148);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer {
+  background-color: rgb(226, 166, 166);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+footer a {
+  text-decoration: none;
+  background-color: rgb(226, 166, 166);
+  color: white;
+  font-size: 20px;
+}
+footer a h2 {
+  font-size: 20px;
+}
+footer i {
+  font-size: 30px;
+  color: white;
+}
+
+@media screen and (max-width: 960px) {
+  .grid-galeria {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 220px;
+  }
+  .grid-item {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .nuestrosclientes h2 {
+    font-size: 30px;
+  }
+  .nuestrosclientes p {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 780px) {
+  .nuestrosclientes h2 {
+    font-size: 20px;
+  }
+  .nuestrosclientes p {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 542px) {
+  .nuestrosclientes h2 {
+    font-size: 15px;
+  }
+  .nuestrosclientes p {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .grid-galeria {
+    grid-template-columns: 1fr;
+  }
+}
+/**------media query header index--------*/
+@media screen and (max-width: 550px) {
+  header h1 {
+    font-size: 20px;
+  }
+}
+/**------media query hero-------*/
+@media screen and (max-width: 870px) {
+  .hero h2 {
+    font-size: 30px;
+  }
+  .hero p {
+    font-size: 20px;
+  }
+  .hero a {
+    font-size: 15px;
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .hero h2 {
+    font-size: 16px;
+  }
+}
+/**------media query .comotrabajamos--------*/
+@media screen and (max-width: 940px) {
+  .comotrabajamos div h2 {
+    font-size: 30px;
+    padding: 5px;
+  }
+  .comotrabajamos div h3 {
+    font-size: 20px;
+    padding: 5px;
+    margin: 5px;
+  }
+  .comotrabajamos div p {
+    font-size: 15px;
+    padding: 5px;
+    margin: 5px;
+  }
+  .comotrabajamos img {
+    width: 500px;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 670px) {
+  .comotrabajamos div h2 {
+    font-size: 20px;
+    padding: 3px;
+    margin: 3px;
+  }
+  .comotrabajamos div h3 {
+    font-size: 10px;
+    padding: 3px;
+    margin: 3px;
+  }
+  .comotrabajamos div p {
+    font-size: 10px;
+    margin: 3px;
+    padding: 3px;
+  }
+  .comotrabajamos img {
+    display: none;
+  }
+}
+/**------media query .sobrenosotros--------*/
+@media screen and (max-width: 987px) {
+  .sobrenosotros div h2 {
+    font-size: 20px;
+    margin: 10px;
+    padding: 10px;
+  }
+  .sobrenosotros div p {
+    font-size: 15px;
+    margin: 10px;
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 890px) {
+  .sobrenosotros img {
+    width: 500px;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 670px) {
+  .sobrenosotros div h2 {
+    font-size: 15px;
+    margin: 5px;
+    padding: 5px;
+  }
+  .sobrenosotros div p {
+    font-size: 10px;
+    margin: 5px;
+    padding: 5px;
+  }
+  .sobrenosotros img {
+    display: none;
+  }
+}
+/**------media query pages Nosotros--------*/
+@media screen and (max-width: 759px) {
+  .comotrabajamos_nos h2 {
+    font-size: 20px;
+    margin: 5px;
+    padding: 5px;
+  }
+  .comotrabajamos_nos p {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 680px) {
+  .carrusel div img {
+    width: 600px !important;
+    height: 400px !important;
+    padding: 15px !important;
+    margin: 10px !important;
+  }
+}
+@media screen and (max-width: 500px) {
+  .carrusel div img {
+    width: 400px !important;
+    height: 300px !important;
+    padding: 10px !important;
+    margin: 8px !important;
+  }
+}
+/**------media Pages Trabaja con Nosotros--------*/
+@media screen and (max-width: 685px) {
+  .trabajar_nos h2 {
+    font-size: 25px;
+    padding: 15px;
+  }
+  .trabajarconnos {
+    font-size: 20px;
+  }
+  .experiencia {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 570px) {
+  .trabajar_nos h2 {
+    font-size: 15px;
+    padding: 10px;
+  }
+  .trabajarconnos {
+    font-size: 15px;
+  }
+  .experiencia {
+    font-size: 15px;
+  }
+}
+/**------media Pages Dejanos tu contacto--------*/
+@media screen and (max-width: 765px) {
+  .dejanostucontacto h2 {
+    font-size: 30px;
+    padding: 7px;
+  }
+  .dejanostucontacto p {
+    font-size: 18px;
+  }
+  .formulario {
+    font-size: 10px;
+    padding: 15px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .dejanostucontacto h2 {
+    font-size: 20px;
+    padding: 5px;
+  }
+  .dejanostucontacto p {
+    font-size: 10px;
+    padding: 10px;
+  }
+}
+/**------media query footer--------*/
+@media screen and (max-width: 700px) {
+  footer h2 {
+    font-size: 20px;
+  }
+  footer i {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 480px) {
+  footer h2 {
+    font-size: 10px;
+  }
+  footer i {
+    font-size: 10px;
+  }
+}/*# sourceMappingURL=estilos.css.map */
