--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -18,21 +18,21 @@
    }
   @media screen and (max-width:780px){
      .nuestrosclientes h2{
-         font-size: 20px;
+         font-size: 25px;
      }
      .nuestrosclientes p{
-         font-size: 15px;
+         font-size: 18px;
      }
   }
  
  
  @media screen and (max-width:542px){
      .nuestrosclientes h2{
-         font-size: 15px;
+         font-size: 20px;
  
      }
      .nuestrosclientes p{
-         font-size: 10px;
+         font-size: 18px;
      }
  }
  
@@ -52,10 +52,10 @@
  /**------media query hero-------*/
  @media screen and (max-width:870px){
      .hero h2{
-         font-size: 30px;
+         font-size: 35px;
      }
  .hero p{
-     font-size: 20px;
+     font-size: 28px;
  }
  .hero a{
      font-size: 15px;
@@ -65,8 +65,16 @@
  
  @media screen and (max-width:640px){
      .hero h2{
-         font-size: 16px;
+         font-size: 25px;
      }
+ }
+ @media screen and (max-width:550px){
+    .hero h2{
+        font-size: 20px;
+    }
+    .hero p{
+        font-size: 18px;
+    }
  }
  /**------media query .comotrabajamos--------*/
  @media screen and (max-width:940px){
@@ -91,17 +99,17 @@
  }
  @media screen and (max-width:670px){
      .comotrabajamos div h2{
-         font-size: 20px;
+         font-size: 25px;
          padding: 3px;
          margin:3px
      }
      .comotrabajamos div h3{
-         font-size: 10px;
+         font-size: 18px;
          padding: 3px;
          margin: 3px;
      }
      .comotrabajamos div p{
-         font-size: 10px;
+         font-size: 15px;
          margin: 3px;
          padding: 3px;
      }
@@ -114,12 +122,12 @@
  
  @media screen and (max-width:987px){
      .sobrenosotros div h2{
-         font-size: 20px;
+         font-size: 25px;
          margin: 10px;
          padding: 10px;
      }
      .sobrenosotros div p{
-         font-size: 15px;
+         font-size: 18px;
          margin: 10px;
          padding: 10px;
      }
@@ -132,12 +140,12 @@
  }
  @media screen and (max-width:670px){
   .sobrenosotros div h2{
-     font-size: 15px;
+     font-size: 20px;
      margin:5px;
      padding: 5px;
   }   
   .sobrenosotros div p{
-     font-size: 10px;
+     font-size: 15px;
      margin: 5px;
      padding: 5px;
      
@@ -149,59 +157,71 @@
  /**------media query pages Nosotros--------*/
  @media screen and (max-width:759px){
      .comotrabajamos_nos h2{
-        font-size: 20px;
+        font-size: 25px;
         margin: 5px;
         padding: 5px;
      }
  .comotrabajamos_nos p{
-     font-size: 15px;
+     font-size: 18px;
  }    
  }
  @media screen and (max-width:680px){
-     .carrusel div img{
-         width:600px !important;
-         height: 400px !important;
-         padding:15px !important ;
-         margin: 10px !important;
+    .carousel-item img{
+        width: 500px !important;
+        height: 400px !important;
+        padding: 15px ;
+        margin: 15px;
+    }
+    .comotrabajamos_nos h2{
+        font-size: 18px;
+        margin:15px;
+    }
+    .comotrabajamos_nos p{
+        font-size: 13px;
+        margin: 15px;
+    }
+ }
+ @media screen and (max-width:517px){
+    .carousel-item img{
+        width: 350px !important;
+        height: 300px !important;
+        padding: 10px !important;
+        margin: 10px !important;
+    }
+ }
+
  
-     }
-     
- }
- @media screen and (max-width:500px){
-     .carrusel div img{
-         width:400px !important ;
-         height: 300px !important;
-         padding: 10px !important;
-         margin: 8px !important;
-     }
- }
  /**------media Pages Trabaja con Nosotros--------*/
+
+ @media screen and (max-width:735px){
+    .trabajaconnosimg{
+  display: none;
+    }
+ }
  @media screen and (max-width:685px){
-     .trabajar_nos h2{
-         font-size: 25px;
-         padding: 15px;
-     }
- .trabajarconnos{
-     font-size: 20px;
+    .trabajar_nos h2{
+        font-size: 20px;
+        padding: 15px;
+    }
+    .trabajar_nos p{
+        font-size: 18px;
+    }
+ }
+    
+      
  
- }
- .experiencia{
-     font-size: 20px;
- }
- }
+ 
  @media screen and (max-width:570px){
-     .trabajar_nos h2{
-         font-size: 15px;
-         padding: 10px;
-     }
- .trabajarconnos{
-     font-size: 15px;
+    .trabajar_nos h2{
+        font-size: 19px;
+        padding: 10px;
+    }
+    .trabajar_nos p{
+       font-size: 18px;
+    }
+ }
+    
  
- }
- .experiencia{
-     font-size: 15px;
- }
- }
  
  /**------media Pages Dejanos tu contacto--------*/
  @media screen and (max-width:765px){
@@ -210,24 +230,26 @@
      padding: 7px;
  }
  .dejanostucontacto p{
-     font-size: 18px;
+     font-size: 20px;
+     margin:10px;
  }
- .formulario{
-     font-size: 10px;
-     padding: 15px;
- }
+ 
  }
  @media screen and (max-width:480px){
      .dejanostucontacto h2{
-         font-size: 20px;
+         font-size: 17px;
          padding: 5px;
      }
  .dejanostucontacto p{
-     font-size: 10px;
+     font-size: 15px;
      padding: 10px;
  }
  }
- 
+ @media screen and (max-width:425px){
+    .imagencontacto{
+        display: none;
+    }
+ }
  /**------media query footer--------*/
  @media screen and (max-width:700px){
  footer h2{
@@ -244,7 +266,6 @@
          font-size: 10px;
      }
      footer i{
-         font-size: 10px;
+         font-size: 15px;
      }
  }
- 
